# ServerStatus

./: .gitignore  .gitmodules  README.md
clients/: client.py
other/: sergate.service
server/: .gitignore  CMakeLists.txt
server/src/: main.cpp  main.h  message.cpp  message.h
status/: index.html
status/js/: serverstatus.js
